--- a/tests/cassettes/test_referral_customer_create.yaml
+++ b/tests/cassettes/test_referral_customer_create.yaml
@@ -20,22 +20,26 @@ interactions:
     uri: https://api.easypost.com/v2/referral_customers
   response:
     body:
-      string: '{"id": "user_6b88c51984604133afad43001ae2170a", "object": "User", "parent_id":
+      string: '{"id": "user_7c9e4c44e93c4a0da732778b91530198", "object": "User", "parent_id":
         null, "name": "test test", "phone_number": "<REDACTED>", "verified": true,
-        "created_at": "2022-09-15T17:59:51Z", "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
-        null, "has_billing_method": null, "cc_fee_rate": "0.0375", "default_insurance_amount":
-        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
-        "<REDACTED>", "children": "<REDACTED>", "api_keys": "<REDACTED>"}'
+        "created_at": "2023-05-10T17:57:26Z", "default_carbon_offset": false, "has_elevate_access":
+        false, "balance": "0.00000", "price_per_shipment": "0.00000", "recharge_amount":
+        null, "secondary_recharge_amount": null, "recharge_threshold": null, "has_billing_method":
+        null, "cc_fee_rate": "0.0375", "default_insurance_amount": "50.00", "insurance_fee_rate":
+        "0.005", "insurance_fee_minimum": "0.25", "email": "<REDACTED>", "children":
+        [], "api_keys": [{"object": "ApiKey", "key": "<REDACTED>", "mode": "test",
+        "created_at": "2023-05-10T17:57:26Z", "active": true, "id": "ak_c72d8904501643ffb897215c5343233e"},
+        {"object": "ApiKey", "key": "<REDACTED>", "mode": "production", "created_at":
+        "2023-05-10T17:57:26Z", "active": true, "id": "ak_c9645d1c4bf34bd5a957962b442ca245"}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '961'
+      - '1018'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"1a6ed597198c8ec85b0d933d032d62aa"
+      - W/"e10e0963ef315935bcf5d541de7d438d"
       expires:
       - '0'
       pragma:
@@ -53,20 +57,20 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - fb9a52ba63236817e787d96500082469
+      - c20c6533645bdb06e2b8e677002062b2
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb8nuq
+      - bigweb9nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb1nuq 6aa9972c1e
-      - extlb2nuq 9ce216bfac
+      - intlb1nuq a29e4ad05c
+      - extlb1nuq a29e4ad05c
       x-runtime:
-      - '1.084522'
+      - '1.043958'
       x-version-label:
-      - easypost-202209142327-76d51e2e7e-master
+      - easypost-202305091956-464aa0b59c-master
       x-xss-protection:
       - 1; mode=block
     status:
