--- a/tests/cassettes/test_referral_customer_update.yaml
+++ b/tests/cassettes/test_referral_customer_update.yaml
@@ -13,7 +13,7 @@ interactions:
       user-agent:
       - <REDACTED>
     method: GET
-    uri: https://api.easypost.com/v2/referral_customers?page_size=5
+    uri: https://api.easypost.com/v2/referral_customers
   response:
     body:
       string: '{"has_more": true, "referral_customers": [{"id": "user_634b6daa05744bfaa205058f06864363",
@@ -51,16 +51,51 @@ interactions:
         "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
         "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
         "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
+        "0.25", "email": "<REDACTED>", "children": []}, {"id": "user_91b120087ff843349b9a3f0675572bb1",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-05-02T19:04:10Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}, {"id": "user_4ae0d572fbe542deb7efa51935a5b826",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-05-02T23:08:40Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
+        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
+        "0.25", "email": "<REDACTED>", "children": []}, {"id": "user_71189529eba747ce83aa69303e22c7df",
+        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-05-04T22:05:27Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}, {"id": "user_c13290f1f6a442d79657b8bfe5daeeba",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-05-05T16:54:58Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
+        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
+        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
+        "<REDACTED>", "children": []}, {"id": "user_b73fdc6c6a58421ea884a82ad14520a5",
+        "object": "User", "parent_id": null, "name": "test test", "phone_number":
+        "<REDACTED>", "verified": true, "created_at": "2022-05-05T16:55:59Z", "default_carbon_offset":
+        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
+        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
+        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
+        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
         "0.25", "email": "<REDACTED>", "children": []}]}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '2858'
+      - '5650'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"57b616a535a9df8008e17cdd2be65c48"
+      - W/"3d5c1bbd8f5654a68eeedb30fe708ecd"
       expires:
       - '0'
       pragma:
@@ -78,18 +113,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - c20c6536645bdb91e2b8e9f200209a0f
+      - 0226657b645bdb07e2b8e68f001e7546
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb3nuq
+      - bigweb12nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
-      - intlb2nuq a29e4ad05c
-      - extlb1nuq a29e4ad05c
+      - intlb1nuq a29e4ad05c
+      - extlb2nuq a29e4ad05c
       x-runtime:
-      - '0.306190'
+      - '0.282081'
       x-version-label:
       - easypost-202305091956-464aa0b59c-master
       x-xss-protection:
@@ -98,7 +133,7 @@ interactions:
       code: 200
       message: OK
 - request:
-    body: null
+    body: '{"user": {"email": "email@example.com"}}'
     headers:
       Accept:
       - '*/*'
@@ -106,52 +141,28 @@ interactions:
       - gzip, deflate
       Connection:
       - keep-alive
+      Content-Length:
+      - '40'
+      Content-Type:
+      - application/json
       authorization:
       - <REDACTED>
       user-agent:
       - <REDACTED>
-    method: GET
-    uri: https://api.easypost.com/v2/referral_customers?before_id=user_488e391395f4416196a31965fecac409&page_size=5
+    method: PUT
+    uri: https://api.easypost.com/v2/referral_customers/user_634b6daa05744bfaa205058f06864363
   response:
     body:
-      string: '{"has_more": false, "referral_customers": [{"id": "user_4a22730cdc844ce1bc2efbed999c869f",
-        "object": "User", "parent_id": null, "name": "test test", "phone_number":
-        "<REDACTED>", "verified": true, "created_at": "2022-04-29T19:35:33Z", "default_carbon_offset":
-        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
-        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
-        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
-        "<REDACTED>", "children": []}, {"id": "user_fa93cc16bcc24c078ee057ce82f38eed",
-        "object": "User", "parent_id": null, "name": "test test", "phone_number":
-        "<REDACTED>", "verified": true, "created_at": "2022-04-28T22:34:38Z", "default_carbon_offset":
-        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
-        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
-        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
-        "<REDACTED>", "children": []}, {"id": "user_35cb81fb8af1454dabf1f6afa7330634",
-        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
-        "<REDACTED>", "verified": true, "created_at": "2022-04-27T20:20:52Z", "default_carbon_offset":
-        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": "100.00", "secondary_recharge_amount": "100.00",
-        "recharge_threshold": "0.00", "has_billing_method": true, "cc_fee_rate": "0.0325",
-        "default_insurance_amount": "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum":
-        "0.25", "email": "<REDACTED>", "children": []}, {"id": "user_634b6daa05744bfaa205058f06864363",
-        "object": "User", "parent_id": null, "name": "Firstname Lastname", "phone_number":
-        "<REDACTED>", "verified": true, "created_at": "2022-04-26T15:50:28Z", "default_carbon_offset":
-        false, "has_elevate_access": false, "balance": "0.00000", "price_per_shipment":
-        "0.00000", "recharge_amount": null, "secondary_recharge_amount": null, "recharge_threshold":
-        null, "has_billing_method": null, "cc_fee_rate": "0.0325", "default_insurance_amount":
-        "50.00", "insurance_fee_rate": "0.005", "insurance_fee_minimum": "0.25", "email":
-        "<REDACTED>", "children": []}]}'
+      string: '{"message": "Referral Customer email updated successfully"}'
     headers:
       cache-control:
       - private, no-cache, no-store
       content-length:
-      - '2285'
+      - '59'
       content-type:
       - application/json; charset=utf-8
       etag:
-      - W/"5eaa34c20f29708290829164f3bc7ead"
+      - W/"7b30d603e3257aee787616dc99d6d4af"
       expires:
       - '0'
       pragma:
@@ -169,18 +180,18 @@ interactions:
       x-download-options:
       - noopen
       x-ep-request-uuid:
-      - c20c6536645bdb91e2b8e9f200209a53
+      - 0226657b645bdb07e2b8e68f001e755f
       x-frame-options:
       - SAMEORIGIN
       x-node:
-      - bigweb11nuq
+      - bigweb2nuq
       x-permitted-cross-domain-policies:
       - none
       x-proxied:
       - intlb2nuq a29e4ad05c
-      - extlb1nuq a29e4ad05c
+      - extlb2nuq a29e4ad05c
       x-runtime:
-      - '0.174558'
+      - '0.116929'
       x-version-label:
       - easypost-202305091956-464aa0b59c-master
       x-xss-protection:
